--- a/src/wwwroot/index.html
+++ b/src/wwwroot/index.html
@@ -32,6 +32,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Blazored.LocalStorage/Blazored.LocalStorage.js"></script>
     <script src="js/pdfviewer.js"></script>
 </body>
 
